compiler/tests/fixtures/invalid/semantics/query_references_undefined_action.viv
// Invalid: query references undefined action

query bad-action-ref:
    roles:
        @witness:
            as: character
    action:
        any: nonexistent
